--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-resizable-element": "^1.2.0",
     "angular2-draggable": "^1.0.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
